# UvA-MasterAI-CV

./: .gitignore  Computer Vision Report - Verschoor, Bargiacchi, Jongstra.tex  README.md  TODO.md  readPcd.m
assignment1/: Makefile  README.md  README.txt  TODO.md  assignment1.m  computeClosestCloud.m  computeForClosestCloud.m  translateCloud.m
assignment1/code/: assignment1.m  computeCentroid.m
assignment1/src/: assignment1.m  computeCentroid.m  computeClosestCloud.m  computeForClosestCloud.m  cumulativeMergeCloudSet.m  mergeCloudSet.m  mergeClouds.m  normalSampling.m  readCloud.m  readNormals.m  readPcd.m  sample.m  translateCloud.m
assignment1/src/pcd/: savepcd.m
assignment2/: Makefile  README.md
assignment2/src/: assignment2.m  chaining.m  eightPoint.m  findFundamentalMatrix.m  findMatches.m  getFilenames.m  loadGrayImage.m  normalise.m  ransac.m  removeBackground.m  visualizePointTracks.m  visualizePoints.m
assignment3/: README.md
assignment3/src/: SFM.m  assignment2  assignment3.m  denseSFM.m
mesh/: CMakeLists.txt  poisson.cpp
visualizer/: CMakeLists.txt  README.md  visualizer.cpp
